--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "themes/themes/blowfish"]
 	path = themes/themes/blowfish
 	url = https://github.com/nunocoracao/blowfish.git
+[submodule "themes/blowfish"]
+	path = themes/blowfish
+	url = https://github.com/nunocoracao/blowfish.git
