--- a/config/_default/languages.en.toml
+++ b/config/_default/languages.en.toml
@@ -35,7 +35,7 @@ title = "silentfin"
 #     { facebook = "https://facebook.com/username" },
 #     { flickr = "https://www.flickr.com/photos/username/" },
 #     { foursquare = "https://foursquare.com/username" },
-      { github = "https://github.com/username" },
+      { github = "https://github.com/silentfin" },
       { rss = "./index.xml" },
       { hackerrank = "https://www.hackerrank.com/profile/silentfin"},
       { leetcode = "https://leetcode.com/u/silentfin/"},
