--- a/config/_default/languages.en.toml
+++ b/config/_default/languages.en.toml
@@ -11,18 +11,17 @@ title = "silentfin"
   dateFormat = "2 January 2006"
 #logo = "img/logo.png"
   # secondaryLogo = "img/secondary-logo.png"
-  description = "my awesome website"
+  description = "afk from gaming, learning backend rn"
   # copyright = "Copy, _right?_ :thinking_face:"
 
 [params.author]
    name = "silentfin"
-#   email = "youremail@example.com"
+   email = "contact@silentfin.com"
    image = "img/avatar.jpg"
    imageQuality = 96
    headline = "afk from gaming, learning backend rn"
    bio = "it's more fun to be competent."
    links = [
-#     { email = "mailto:hello@your_domain.com" },
 #     { link = "https://link-to-some-website.com/" },
 #     { amazon = "https://www.amazon.com/hz/wishlist/ls/wishlist-id" },
 #     { apple = "https://www.apple.com" },
@@ -36,9 +35,10 @@ title = "silentfin"
 #     { flickr = "https://www.flickr.com/photos/username/" },
 #     { foursquare = "https://foursquare.com/username" },
       { github = "https://github.com/silentfin" },
-      { rss = "./index.xml" },
+      { email = "mailto:contact@silentfin.com" },
       { hackerrank = "https://www.hackerrank.com/profile/silentfin"},
       { leetcode = "https://leetcode.com/u/silentfin/"},
+      { rss = "./index.xml" },
       #{ backloggd = "https://backloggd.com/u/electrosenpai/"},
 #     { gitlab = "https://gitlab.com/username" },
 #     { google = "https://www.google.com/" },
