--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -92,7 +92,7 @@ forgejoDefaultServer = "https://v11.next.forgejo.org"
   showAuthorsBadges = false
   showWordCount = true
   # sharingLinks = [ "linkedin", "twitter", "bluesky", "mastodon", "reddit", "pinterest", "facebook", "email", "whatsapp", "telegram", "line"]
-  sharingLinks = ["twitter", "reddit", "bluesky",  "linkedin", "email"]
+  # sharingLinks = ["twitter", "reddit", "bluesky",  "linkedin", "email"]
   showZenMode = true
   # externalLinkForceNewTab = false # disable to allow external links in the same tab (defaults to true)
 
