add basic analytics

--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -151,8 +151,8 @@ forgejoDefaultServer = "https://v11.next.forgejo.org"
   # domain = "llama.yoursite.com"
 
 [umamiAnalytics]
-  # websiteid = "ABC12345"
-  # domain = "llama.yoursite.com"
+  websiteid = "b3aef3d3-6744-4a6e-a4ce-a1130b74ae85"
+  domain = "cloud.umami.is"
   # dataDomains = "yoursite.com,yoursite2.com"
   # scriptName = ""
   # enableTrackEvent = true
